<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn = "navigation_view"
    android:fitsSystemWindows="true">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>


        <item android:id="@+id/nav_settings"
            android:icon="@drawable/icons8_settings"
            android:title="@string/settings"/>


        <item android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/share"/>


        <item android:id="@+id/nav_login"
            android:icon="@drawable/baseline_arrow_forward_24"
            android:title="@string/login"/>

        <item android:id="@+id/nav_signin"
            android:icon="@drawable/signup_icon"
            android:title="@string/sign_up"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_arrow_back_24"
            android:title="@string/logout"/>

        <item android:id="@+id/theme_setter"
            android:icon="@drawable/baseline_add_comment_24"
            android:title="@string/set_theme"/>

    </group>

</menu>