<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment"
    style="@style/SCREEN">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_text"
        android:src="@drawable/logo_background"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:id="@+id/logo_background"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_background"
        android:src="@drawable/logo_text"
        app:layout_constraintTop_toTopOf="@id/logo_background"
        app:layout_constraintBottom_toBottomOf="@id/logo_background"
        android:id="@+id/logo_text"
        android:scaleType="centerCrop"
       style="@style/LOGOTEXT" />

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/round_corners_gray"
        android:orientation="vertical"
        android:padding="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_background"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        >


        <TextView
            android:id="@+id/username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/user_name"
            android:textAppearance="@style/TextAppearance.BoldText"
            android:textColor="@color/black_div"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:background="@drawable/round_corners_white"
            android:hint="@string/username_hint"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/gray_light"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/password"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:textAppearance="@style/TextAppearance.BoldText"
            android:textColor="@color/black_div"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_corners_white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/gray_light"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:background="@drawable/diff_round_corners_orange"
            android:backgroundTint="@color/crispy_orange"
            android:hint="@string/login"
            app:rippleColor="#1A237E" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/new_user" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
