<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpFragment"
    android:id="@+id/container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.SignUpActivity"
        android:background="@drawable/round_corners_gray"

        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Email :"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"
               />

            <EditText
                android:id="@+id/etEmailAddress"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_mail_address"
                android:inputType="textEmailAddress"
                android:background="@drawable/round_corners_white"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username :"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"/>

            <EditText
                android:id="@+id/etUsername"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners_white"
                android:ems="10"
                android:hint="@string/et_username"
                android:inputType="text"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password :"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"/>
            <EditText
                android:id="@+id/etPassword"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/round_corners_white"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Password :"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"/>
            <EditText
                android:id="@+id/et_confirm_password"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners_white"
                android:ems="10"
                android:hint="@string/et_confirm_password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Displayed name :"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"/>
            <EditText
                android:id="@+id/etDisplayName"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_name"
                android:inputType="text"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/round_corners_white"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number :"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"/>
            <EditText
                android:id="@+id/etPhoneNumber"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners_white"
                android:ems="10"
                android:hint="@string/et_phone_number"
                android:inputType="phone"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date"
                android:textAppearance="@style/TextAppearance.BoldText"
                android:textColor="@color/black_div"/>
            <EditText
                android:id="@+id/etDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_date_of_birth"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:inputType="date"
                android:background="@drawable/round_corners_white"
                android:padding="10dp"
                android:textColorHint="@color/gray_light"/>

            <FrameLayout
                android:id="@+id/add_profile_picture_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/AddProfilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_profile_picture"
                    android:textSize="16sp"
                    android:textColor="@color/black_div"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/btnAddProfileImg"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/add_profile_picture"
                    android:focusable="true"
                    app:srcCompat="@drawable/btn_profile_img_foreground"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Circular"
                    android:scaleType="centerCrop"
                    android:clickable="true"/>

                <ProgressBar
                    android:id="@+id/signUpProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSighUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:layout_marginEnd="20dp"
                style="@style/BUTTON"
                android:textColor="@color/off_white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="20dp"
                style="@style/BUTTON"
                android:textColor="@color/off_white"/>
        </LinearLayout>


        <TextView
            android:id="@+id/errorDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="no error"
            android:textColor="#D32F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>